update create user script

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -91,8 +91,8 @@
         signupInfo.controls.userProfile.touched) &&
         signupInfo.controls.userProfile.errors}"
             >
-            <option value="admin">Admin</option>
-            <option value="medico">Pessoa médica</option>
+            <option value="ADMIN">Admin</option>
+            <option value="MEDICO">Pessoa médica</option>
             </select>
             <span class="error-message"
             *ngIf="(signupInfo.controls.userProfile.dirty ||
