--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -170,7 +170,7 @@
 <!-- ForgotPassword Modal ("Redefinir senha"): -->
 <ng-template #forgotPasswordModal>
 
-    <form (ngSubmit)="forgotPassword()" [formGroup]="forgotPasswordInfo">
+    <form (ngSubmit)="redefinePassword()" [formGroup]="forgotPasswordInfo">
         <div class="modal-header">
             <h4 class="modal-title">Redefinir senha</h4>
             <button type="button"
