--- a/src/app/components/consultation/consultation.component.html
+++ b/src/app/components/consultation/consultation.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="strip-unit">
                 <div class="strip-label">Data de nascimento:</div>
-                <div>{{patient.birthDate | birthDate}}</div>
+                <div>{{patient.birthDate | mask: 'd0/M0/0000'}}</div>
                 </div>
                 <div class="strip-unit">
                 <div class="strip-label">Convênio:</div>
@@ -141,28 +141,28 @@
                         formControlName="prescribedMedication" class="large-field"></textarea>
                 </div>
                 <div class="form-unit">
-                    <label for="dosage-precautions">Dosagem e Precauções:</label>
+                    <label for="dosage-precautions">Observações:</label>
                     <textarea id="dosage-precautions" name="dosage-precautions" type="text"
-                        formControlName="dosagePrecautions" class="large-field" [ngClass]="{'error-border': (
-                            consultationInfo.controls.dosagePrecautions.dirty ||
-                            consultationInfo.controls.dosagePrecautions.touched) &&
-                            consultationInfo.controls.dosagePrecautions.errors}"></textarea>
+                        formControlName="observation" class="large-field" [ngClass]="{'error-border': (
+                            consultationInfo.controls.observation.dirty ||
+                            consultationInfo.controls.observation.touched) &&
+                            consultationInfo.controls.observation.errors}"></textarea>
                     <span class="error-message" *ngIf="(
-                            consultationInfo.controls.dosagePrecautions.dirty ||
-                            consultationInfo.controls.dosagePrecautions.touched) &&
-                            consultationInfo.controls.dosagePrecautions.errors &&
-                            consultationInfo.controls.dosagePrecautions.errors['required']">Campo obrigatório</span>
+                            consultationInfo.controls.observation.dirty ||
+                            consultationInfo.controls.observation.touched) &&
+                            consultationInfo.controls.observation.errors &&
+                            consultationInfo.controls.observation.errors['required']">Campo obrigatório</span>
                     <span class="error-message" *ngIf="(
-                            consultationInfo.controls.dosagePrecautions.dirty &&
-                            consultationInfo.controls.dosagePrecautions.touched) &&
-                            consultationInfo.controls.dosagePrecautions.errors &&
-                            consultationInfo.controls.dosagePrecautions.errors['minlength']">Este campo precisa de pelo
+                            consultationInfo.controls.observation.dirty &&
+                            consultationInfo.controls.observation.touched) &&
+                            consultationInfo.controls.observation.errors &&
+                            consultationInfo.controls.observation.errors['minlength']">Este campo precisa de pelo
                         menos 16 caracteres</span>
                     <span class="error-message" *ngIf="(
-                            consultationInfo.controls.dosagePrecautions.dirty ||
-                            consultationInfo.controls.dosagePrecautions.touched) &&
-                            consultationInfo.controls.dosagePrecautions.errors &&
-                            consultationInfo.controls.dosagePrecautions.errors['maxlength']">Este campo não pode
+                            consultationInfo.controls.observation.dirty ||
+                            consultationInfo.controls.observation.touched) &&
+                            consultationInfo.controls.observation.errors &&
+                            consultationInfo.controls.observation.errors['maxlength']">Este campo não pode
                         ultrapassar 256 caracteres</span>
                 </div>
             </section>
