--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -298,7 +298,14 @@ patientInfo.controls.maritalStatus.errors}">
                 <div class="form-unit">
                     <label for="patient-allergies">Lista de Alergias:</label>
                     <textarea id="patient-allergies" name="patient-allergies" type="text"
-                        formControlName="allergies"></textarea>
+                        formControlName="allergies"     
+                         [ngClass]="{'error-border': (patientInfo.controls.allergies.dirty ||
+                         patientInfo.controls.maritalStatus.touched) &&
+                         patientInfo.controls.allergies.errors}"></textarea>
+                         <span class="error-message" *ngIf="(patientInfo.controls.allergies.dirty ||
+                        patientInfo.controls.allergies.touched) &&
+                        patientInfo.controls.allergies.errors &&
+                        patientInfo.controls.allergies.errors['required']">Campo obrigatório</span>
                 </div>
                 <div class="form-unit">
                     <label for="patient-care">Cuidados Específicos:</label>
