adicionado telefone a listagem

--- a/src/app/components/records/records.component.html
+++ b/src/app/components/records/records.component.html
@@ -19,9 +19,13 @@
                 <div class="strip-code">Registro {{patient.id}}</div>
                 </div>
                 <div class="strip-unit">
-                <div class="strip-label">Data de nascimento:</div>
+                 <div class="strip-label">Telefone:</div>
+                  <div>{{patient.phone}}</div>
+                 </div>        
+
+                <!-- <div class="strip-label">Data de nascimento:</div>
                 <div>{{patient.birthDate | birthDate}}</div>
-                </div>
+                </div> -->
                 <div class="strip-unit">
                 <div class="strip-label">Convênio:</div>
                 <div>{{patient.insuranceCompany}}
