--- a/src/app/components/shared/sidemenu/sidemenu.component.html
+++ b/src/app/components/shared/sidemenu/sidemenu.component.html
@@ -2,25 +2,33 @@
     <div id="logo-container" routerLink="home"><img id="logo"></div>
     <div id="nav-container">
         <nav>
-            <div class="nav-item" routerLink="home" title="Início">
+            <div *ngIf="userPatient && patientId" class="nav-item" [routerLink]="'medical-records/' + patientId" title="Início">
                 <div class="nav-icon"><fa-icon [icon]="faCircleInfo"></fa-icon></div>
                 <div class="nav-text">Início</div>
             </div>
-            <div class="nav-item" routerLink="medical-records" title="Listar prontuário">
+            <div *ngIf="userAdmin || userDoctor" class="nav-item" routerLink="home" title="Início">
+                <div class="nav-icon"><fa-icon [icon]="faCircleInfo"></fa-icon></div>
+                <div class="nav-text">Início</div>
+            </div>
+            <div *ngIf="userAdmin || userDoctor" class="nav-item" routerLink="medical-records" title="Listar prontuário">
                 <div class="nav-icon"><fa-icon [icon]="faClipboardUser"></fa-icon></div>
                 <div class="nav-text">Listar prontuário</div>
             </div>
-            <div class="nav-item" routerLink="register-patient" title="Cadastrar paciente">
+            <div *ngIf="userAdmin || userDoctor" class="nav-item" routerLink="register-patient" title="Cadastrar paciente">
                 <div class="nav-icon"><fa-icon [icon]="faUserPlus"></fa-icon></div>
                 <div class="nav-text">Cadastrar paciente</div>
             </div>
-            <div class="nav-item" routerLink="register-consultation" title="Cadastrar consulta">
+            <div *ngIf="userAdmin || userDoctor" class="nav-item" routerLink="register-consultation" title="Cadastrar consulta">
                 <div class="nav-icon"><fa-icon [icon]="faStethoscope"></fa-icon></div>
                 <div class="nav-text">Cadastrar consulta</div>
             </div>
-            <div class="nav-item" routerLink="register-exam" title="Cadastrar exame">
+            <div *ngIf="userAdmin || userDoctor" class="nav-item" routerLink="register-exam" title="Cadastrar exame">
                 <div class="nav-icon"><fa-icon [icon]="faMicroscope"></fa-icon></div>
                 <div class="nav-text">Cadastrar exame</div>
+            </div>
+            <div *ngIf="userAdmin" class="nav-item" routerLink="users-list" title="Listagem de pessoas usuárias">
+                <div class="nav-icon"><fa-icon [icon]="faUsersGear"></fa-icon></div>
+                <div class="nav-text">Pessoas usuárias</div>
             </div>
             <div class="nav-item" (click)="logout()" title="Sair">
                 <div class="nav-icon"><fa-icon [icon]="faDoorOpen"></fa-icon></div>
