update toolbar with users list page title

--- a/src/app/components/shared/toolbar/toolbar.component.html
+++ b/src/app/components/shared/toolbar/toolbar.component.html
@@ -20,6 +20,12 @@
         <div *ngIf="getCurrentUrl() == '/medical-records'">
             Listagem de Prontuário
         </div>
+        <div *ngIf="getCurrentUrl() == '/users-list'">
+            Listagem de Pessoas Usuárias
+        </div>
+        <div *ngIf="getCurrentUrl().includes('/edit-user')">
+            Editar Pessoa Usuária
+        </div>
         <div *ngIf="getCurrentUrl().includes('/medical-records/')">
             Prontuário de Paciente
         </div>
