--- a/src/app/components/exam/exam.component.html
+++ b/src/app/components/exam/exam.component.html
@@ -82,7 +82,7 @@
 
                     <div>
                         <div class="form-unit">
-                            <label for="exam-date">Data da Consulta:</label>
+                            <label for="exam-date">Data do Exame:</label>
                             <input id="exam-date" name="exam-date" type="date" formControlName="date"
                                 required [ngClass]="{'error-border': (
                         examInfo.controls.date.dirty ||
@@ -98,7 +98,7 @@
 
                     <div>
                         <div class="form-unit">
-                            <label for="exam-time">Horário da Consulta:</label>
+                            <label for="exam-time">Horário do Exame:</label>
                             <input id="exam-time" name="exam-time" type="time" formControlName="time"
                                 required [ngClass]="{'error-border': (
                         examInfo.controls.time.dirty ||
