retorno da funcao de abrir pronturario / funcao pra editar cadastro e correcao do botao (scss)

--- a/src/app/components/records/records.component.scss
+++ b/src/app/components/records/records.component.scss
@@ -92,3 +92,27 @@
         }
     }
 }
+
+.edit-button {
+    background-color: $buttonColor;
+    border-radius: 10px;
+    line-height: 65px;
+    &:hover {
+        background-color: $buttonHover;
+    }
+    &:active {
+        background-color: $buttonActive;
+    }
+}
+
+#edit-patientDetail{
+    button {
+        @include basic-button;
+        margin-left: 10px;
+        margin-right: 10px;
+        
+        
+        
+    }
+
+}
