--- a/src/app/components/records/records-detail/records-detail.component.html
+++ b/src/app/components/records/records-detail/records-detail.component.html
@@ -14,15 +14,15 @@
             <p *ngIf="patient.insuranceCompany">{{patient.insuranceCompany}}</p>
             <p *ngIf="!patient.insuranceCompany">Não possui</p>
             <h4>Contato</h4>
-            <p>{{patient.phone | phone}}</p>
+            <p>{{patient.phone}}</p>
             <h4>CPF:</h4>
             <p>{{patient.cpf}}</p>
             <h4>Data de nascimento:</h4>
-            <p>{{patient.birthDate}}</p>
+            <p>{{patient.birthDate | dateFormatterIn}}</p>
 
 
             <h4>Contato de emergência</h4>
-            <p>{{patient.emergencyContact | phone}}</p>
+            <p>{{patient.emergencyContact}}</p>
             <h4 *ngIf="patient.allergies">Lista de alergias</h4>
             <p *ngIf="patient.allergies">{{patient.allergies}}</p>
             <h4 *ngIf="patient.specialCare">Lista de cuidados específicos</h4>
