--- a/src/app/components/records/records-detail/records-detail.component.html
+++ b/src/app/components/records/records-detail/records-detail.component.html
@@ -6,7 +6,7 @@
         </div>
         <div id="patient-data-body">
             <div id="patient-data-first-line">
-            <div id="patient-name">{{patient.name}}</div>
+            <div id="patient-name">{{patient?.name}}</div>
             <div class="event-button"><button (click)="editPatient(patient.id)">Atualizar cadastro</button></div>
             </div>
             <h4 *ngIf="patient.insuranceCompany">Convênio</h4>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="event-exam" *ngIf="event.type">
+            <div class="event-exam" *ngIf="event.tipo">
                 <div class="event-header">
                     <div>
                         <h3>Exame</h3>
@@ -82,17 +82,17 @@
                     <div class="event-header-secondrow">
                         <div class="header-unit">
                             <fa-icon [icon]="faMicroscope"></fa-icon>
-                            <h2>{{event.name}}</h2>
+                            <h2>{{event.nome}}</h2>
                         </div>
                         <div class="event-header-datetime">
                             <div class="header-unit">
                                 <fa-icon [icon]="faCalendarDay"></fa-icon>
-                                <h2>{{event.date | date: "dd/MM/YYYY"}}</h2>
+                                <h2>{{event.dataExame | date: "dd/MM/YYYY"}}</h2>
                             </div>
                             <div class="header-unit">
                                 <div><fa-icon [icon]="faClock"></fa-icon></div>
                                 <div>
-                                    <h2>{{event.time}}</h2>
+                                    <h2>{{event.horaExame}}</h2>
                                 </div>
                             </div>
                         </div>
@@ -102,18 +102,18 @@
                     <div class="event-body-firstrow">
                         <div class="exam-lab">
                             <h4>Laboratório </h4>
-                            <p>{{event.laboratory}}</p>
+                            <p>{{event.laboratorio}}</p>
                         </div>
                         <div class="exam-type">
                             <h4>Tipo </h4>
-                            <p>{{event.type}}</p>
+                            <p>{{event.tipo}}</p>
                         </div>
                     </div>
-                    <h4 *ngIf="event.documentUrl">Anexo</h4>
-                    <a *ngIf="event.documentUrl" class="attachment" href="{{event.documentUrl}}"
+                    <h4 *ngIf="event.url">Anexo</h4>
+                    <a *ngIf="event.url" class="attachment" href="{{event.documentUrl}}"
                         target="_blank"><fa-icon [icon]="faPaperclip"></fa-icon></a>
                     <h4>Resultados </h4>
-                    <p>{{event.results}}</p>
+                    <p>{{event.resultados}}</p>
                 </div>
                 <div class="event-button">
                     <button (click)="editExam(event.id)">Editar</button>
