Pacientes nos cards com os dados solicitados e estatisticas basicas do sistema

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,7 +65,7 @@
                 <div>
                     <label>Contato: </label>
                     <div>
-                        <span> {{patient.phone | phone}}</span>
+                        <span> {{patient.phone}}</span>
                         <span *ngIf="patient.email"> {{patient.email}}</span>
                     </div>
                 </div>
