Botão Ver Mais que abre prontuário do paciente

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button (click)="editPatient(patient.id)">Atualizar cadastro</button>
+                    <button (click)="redirectToDetail(patient.id)">Ver Mais</button>
                 </div>
             </div>
         </div>
