change company logo to the squad logo

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -35,7 +35,7 @@
                 <a (click)="openModal(signUpModal)">Criar conta.</a>
             </div>
             <div id="login-footer">
-                <a href="https://lab365.tech"><img id="login-logo-lab365" src="../../../assets/images/logo-LAB365.svg" alt="Marca do LABM365"/></a>
+                <a href="https://lab365.tech"><img id="login-logo-qcode" src="../../../assets/images/logo-qcode.png" alt="Marca da squad 2: Qcode"/></a>
             </div>
 
 
