--- a/src/app/components/shared/sidemenu/sidemenu.component.scss
+++ b/src/app/components/shared/sidemenu/sidemenu.component.scss
@@ -64,7 +64,7 @@
 }
 
 #nav-container {
-    padding-top: 20%;
+    padding-top: 1em;
     display: flex;
     justify-content: center;
     flex-grow: 1;
