user amount only visible to admin

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
                 <div>exames</div>
             </div>
         </div>
-        <div class="stats-unit">
+        <div *ngIf="userAdmin" class="stats-unit">
             <div class="stats-icon">
                 <fa-icon [icon]="faUsersGear"></fa-icon>
             </div>
