--- a/src/app/components/records/records.component.html
+++ b/src/app/components/records/records.component.html
@@ -9,18 +9,18 @@
     </div>
 
     <div *ngIf="resultsList" id="patient-results">
-        <div *ngFor="let patient of resultsList">
-            <div class="patient-strip" (click)="redirectToDetail(patient.id)">
+        <div *ngFor="let patients of resultsList">
+            <div class="patient-strip" (click)="redirectToDetail(patients.paciente.id)">
                 <div class="strip-main">
-                <h3 class="strip-name">{{patient.name}}</h3>
+                <h3 class="strip-name">{{patients.paciente.name}}</h3>
                 </div>
                 <div class="strip-secondary">
                 <div class="strip-unit">
-                <div class="strip-code">Registro {{patient.id}}</div>
+                <div class="strip-code">Registro {{patients.paciente.id}}</div>
                 </div>
                 <div class="strip-unit">
                  <div class="strip-label">Telefone:</div>
-                  <div>{{patient.phone}}</div>
+                  <div>{{patients.paciente.phone}}</div>
                  </div>        
 
                 <!-- <div class="strip-label">Data de nascimento:</div>
@@ -28,11 +28,11 @@
                 </div> -->
                 <div class="strip-unit">
                 <div class="strip-label">Convênio:</div>
-                <div>{{patient.insuranceCompany}}
-                <span *ngIf="!patient.insuranceCompany">Não possui convênio.</span></div>
+                <div>{{patients.paciente.insuranceCompany}}
+                <span *ngIf="!patients.insuranceCompany">Não possui convênio.</span></div>
                 </div>
                 </div>
-                <div id="edit-patientDetail" class="edit-button"> <button (click)="redirectToPatient(patient.id)" class="primary-button" >Editar</button> </div>
+                <div id="edit-patientDetail" class="edit-button"> <button (click)="redirectToPatient(patients.paciente.id)" class="primary-button" >Editar</button> </div>
             </div>
         </div>
     </div>
