Corrigido endpoint pacientes/{id}/prontuarios para preencher prontuario detail

--- a/src/app/components/records/records-detail/records-detail.component.html
+++ b/src/app/components/records/records-detail/records-detail.component.html
@@ -6,29 +6,29 @@
         </div>
         <div id="patient-data-body">
             <div id="patient-data-first-line">
-            <div id="patient-name">{{patient?.name}}</div>
-            <div *ngIf="!userPatient" class="event-button"><button (click)="editPatient(patient.id)">Atualizar cadastro</button></div>
+            <div id="patient-name">{{patient?.paciente.name}}</div>
+            <div *ngIf="!userPatient" class="event-button"><button (click)="editPatient(patient.paciente.id)">Atualizar cadastro</button></div>
             </div>
-            <h4 *ngIf="patient.insuranceCompany">Convênio</h4>
-            <h4 *ngIf="!patient.insuranceCompany">Convênio</h4>
-            <p *ngIf="patient.insuranceCompany">{{patient.insuranceCompany}}</p>
-            <p *ngIf="!patient.insuranceCompany">Não possui</p>
+            <h4 *ngIf="patient.paciente.insuranceCompany">Convênio</h4>
+            <h4 *ngIf="!patient.paciente.insuranceCompany">Convênio</h4>
+            <p *ngIf="patient.paciente.insuranceCompany">{{patient.insuranceCompany}}</p>
+            <p *ngIf="!patient.paciente.insuranceCompany">Não possui</p>
             <h4>Contato</h4>
-            <p>{{patient.phone}}</p>
+            <p>{{patient.paciente.phone}}</p>
             <h4>CPF:</h4>
-            <p>{{patient.cpf}}</p>
+            <p>{{patient.paciente.cpf}}</p>
             <h4>Data de nascimento:</h4>
-            <p>{{patient.birthDate | dateFormatterIn}}</p>
+            <p>{{patient.paciente.birthDate | dateFormatterIn}}</p>
 
 
             <h4>Contato de emergência</h4>
-            <p>{{patient.emergencyContact}}</p>
-            <h4 *ngIf="patient.allergies">Lista de alergias</h4>
-            <p *ngIf="patient.allergies">{{patient.allergies}}</p>
-            <h4 *ngIf="patient.specialCare">Lista de cuidados específicos</h4>
-            <h4 *ngIf="!patient.specialCare">Lista de cuidados específicos</h4>
-            <p *ngIf="patient.specialCare">{{patient.specialCare}}</p>
-            <p *ngIf="!patient.specialCare">{{patient.specialCare}}Não possui</p>
+            <p>{{patient.paciente.emergencyContact}}</p>
+            <h4 *ngIf="patient.paciente.allergies">Lista de alergias</h4>
+            <p *ngIf="patient.paciente.allergies">{{patient.allergies}}</p>
+            <h4 *ngIf="patient.paciente.specialCare">Lista de cuidados específicos</h4>
+            <h4 *ngIf="!patient.paciente.specialCare">Lista de cuidados específicos</h4>
+            <p *ngIf="patient.paciente.specialCare">{{patient.specialCare}}</p>
+            <p *ngIf="!patient.paciente.specialCare">{{patient.specialCare}}Não possui</p>
         </div>
     </div>
 
