Bug corrigido para resgatar a data no formato correto ao selecionar paciente da pesquisa de cadastrar consulta

--- a/src/app/components/consultation/consultation.component.html
+++ b/src/app/components/consultation/consultation.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="strip-unit">
                 <div class="strip-label">Data de nascimento:</div>
-                <div>{{patient.birthDate | mask: 'd0/M0/0000'}}</div>
+                <div>{{patient.birthDate | birthDate}}</div>
                 </div>
                 <div class="strip-unit">
                 <div class="strip-label">Convênio:</div>
