--- a/src/app/components/records/records-detail/records-detail.component.html
+++ b/src/app/components/records/records-detail/records-detail.component.html
@@ -65,9 +65,10 @@
 
                     <h4>Medicação Receitada </h4>
                     <p>{{event.prescribedMedication}}</p>
+                    <p *ngIf="!event.prescribedMedication">Sem medicação prescrita.</p>
 
-                    <h4>Dosagem e Precauções </h4>
-                    <p>{{event.dosagePrecautions}}</p>
+                    <h4>Observações </h4>
+                    <p>{{event.observation}}</p>
                 </div>
                 <div class="event-button">
                     <button *ngIf="!userPatient" (click)="editConsultation(event.id)">Editar</button>
@@ -110,7 +111,7 @@
                         </div>
                     </div>
                     <h4 *ngIf="event.url">Anexo</h4>
-                    <a *ngIf="event.url" class="attachment" href="{{event.documentUrl}}"
+                    <a *ngIf="event.url" class="attachment" href="{{event.url}}"
                         target="_blank"><fa-icon [icon]="faPaperclip"></fa-icon></a>
                     <h4>Resultados </h4>
                     <p>{{event.resultados}}</p>
